Fix z-index issues

--- a/src/app/_ui/components/Header/Header.module.css
+++ b/src/app/_ui/components/Header/Header.module.css
@@ -16,7 +16,7 @@
   top: 0;
   left: 0;
   justify-content: space-between;
-  z-index: 2;
+  z-index: 1000;
   gap: 1.5rem;
   width: 100%;
   height: var(--navbar-height);
